<resources>
    <string name="app_name" translatable="false">com.d22.qlda</string>
    <string name="need_help_signing_in">Need help signing in?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="ConfirmPass">Confirm your password</string>
    <string name="email_address">Email Address</string>
    <string name="close">close\n</string>
    <string name="button1">butoon1</string>
    <string name="const_string_qlda">QLDA</string>
    <string name="text_hint_find">Tìm kiếm</string>
    <string name="text_your_workspace">CÁC KHÔNG GIAN LÀM VIỆC CỦA BẠN</string>
    <string name="text_plus_icon">+</string>
    <string name="text_x_icon">x</string>
    <string name="signal_icon">signal_icon</string>
    <string name="profile_image">profile_image</string>
    <string name="text_hint_enterAddName">Nhấp để thêm tên</string>
    <string name="text_const_inList">Trong danh sách:</string>
    <string name="text_const_description">Mô tả : </string>
    <string name="text_hint_comment">Bình luận</string>
    <string name="text_hint_name">Name</string>
    <string name="text_hint_numberphone">Number Phone</string>
    <string name="text_hint_male">Male</string>
    <string name="text_hint_female">Female</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dateOfBirth">Date of birth:</string>
    <string name="update">Update</string>
    <string name="issue_search_button_description">Search Button</string>
    <string name="issue_user">User</string>
    <string name="issue_search">Search Issue</string>
    <string name="all_issues">All issues</string>
    <string name="issues">Issues</string>
    <string name="to_day">Today</string>
    <string name="home">Home</string>
    <string name="project">Project</string>
    <string name="dash_board">Dashboard</string>
    <string name="text_notification">Thông báo</string>
    <string name="number_of_issues">results</string>
    <string name="cancel">Hủy</string>
    <string name="create_issue">Create issue</string>
    <string name="create">Create</string>
    <string name="text_QLDA">QLDA</string>
    <string name="text_task">Task</string>
    <string name="description">Description</string>
    <string name="add_description">Add a description</string>
    <string name="enter_name_issue">Enter name issue</string>
    <string name="status_QLDA">Status</string>
    <string name="text_todo">To Do</string>
    <string name="text_actions">Actions</string>
    <string name="search_comment">Nhập một nhận xét ...</string>
    <string name="fisrt_comment">Leave the first comment</string>
</resources>