<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Logo ImageView -->
<!--    <ImageView-->
<!--        android:id="@+id/logo"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/trane_logo" &lt;!&ndash; Your logo image &ndash;&gt;-->
<!--    android:contentDescription="Logo"-->
<!--    android:layout_gravity="center" />-->

    <!-- Sign In TextView -->
    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        android:layout_gravity="center" />

    <!-- Email Address EditText -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:autofillHints="" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:autofillHints="" />

    <!-- Remember Me Checkbox -->
    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginTop="16dp" />

    <!-- Sign In Button -->
    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/black"
        android:textColor="@android:color/white" />

    <!-- Need Help TextView -->
    <TextView
        android:id="@+id/tvNeedHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_help_signing_in"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="16dp"
        android:layout_gravity="center" />

</LinearLayout>
