<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_user"
            android:contentDescription="Logo"
            android:layout_gravity="center" />

        <!-- Sign In TextView -->
        <TextView
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_gravity="center" />

        <!-- Email Address EditText -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:autofillHints="" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:autofillHints="" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/etRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ConfirmPass"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:autofillHints="" />

        <!-- Remember Me Checkbox -->
        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginTop="16dp" />

        <!-- Sign In Button -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/black"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_weight="1"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/black"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <!-- Need Help TextView -->
        <TextView
            android:id="@+id/tvNeedHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_help_signing_in"
            android:textColor="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            android:layout_gravity="center" />
    </LinearLayout>

</RelativeLayout>
