<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gains_boro">
    <LinearLayout
        android:id="@+id/headerInssue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageButton
            android:id="@+id/imgBtnUser"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="@drawable/ic_user"
            android:contentDescription="@string/issue_user"/>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/txtInssue"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/issues"
                android:textSize="25sp"
                android:layout_weight="1"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@id/imgBtnSearch"/>
            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:hint="@string/issue_search"
                android:inputType="text"
                android:background="@color/white"
                />
            <ImageButton
                android:id="@+id/imgBtnSearch"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_search"
                android:background="@color/gains_boro"
                android:scaleType="centerCrop"
                app:tint="@color/blue_2"
                app:layout_constraintStart_toEndOf="@id/txtInssue"
                android:contentDescription="@string/issue_search_button_description"
                />
        </LinearLayout>
        <ImageButton
            android:id="@+id/imgBtnAddIssues"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_add"
            android:background="@color/gains_boro"
            android:scaleType="centerCrop"
            android:layout_weight="1"
            app:tint="@color/blue_2"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bodyIssue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/headerInssue">
        <LinearLayout
            android:id="@+id/headerIssue"
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/imgIssue"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:src="@drawable/ic_sync_saved_locally"
                android:background="@drawable/rounded_background_gainsboro"
                app:tint="@color/black"/>
            <LinearLayout
                android:id="@+id/allIssues"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtAllView"
                    android:layout_width="250dp"
                    android:layout_height="30dp"
                    android:text="@string/all_issues"
                    android:textSize="21sp"/>

                <TextView
                    android:id="@+id/txtNumberOfIssue"
                    android:layout_width="250dp"
                    android:layout_height="20dp"
                    android:text="@string/number_of_issues"/>
            </LinearLayout>
            <ImageButton
                android:id="@+id/imgBtnShowIssues"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:src="@drawable/ic_keyboard_arrow_down"
                android:scaleType="centerCrop"
                app:tint="@color/black"
                />
        </LinearLayout>
        <ListView
            android:id="@+id/listClassifyIssues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/headerIssue"
            android:visibility="gone"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/txtDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="100dp"
        android:layout_marginTop="25dp"
        android:text="@string/to_day"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/bodyIssue"/>
    <ListView
        android:id="@+id/listIssue"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_background"
        app:layout_constraintTop_toBottomOf="@id/txtDay"
        app:layout_constraintBottom_toTopOf="@id/navigationBar"
        android:layout_marginBottom="40dp"
        />
    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingBottom="30dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imgBtnHome"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_home"
                android:background="@color/white"
                app:tint="@color/gray3"
                android:scaleType="centerCrop"
                />
            <TextView
                android:id="@+id/txtHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@+id/home"
                android:text="@string/home"
                android:textSize="12sp"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/project"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imgBtnProject"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_project"
                android:background="@color/white"
                app:tint="@color/gray3"
                android:scaleType="centerCrop"
                />
            <TextView
                android:id="@+id/txtProject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@+id/imgBtnProject"
                android:text="@string/project"
                android:textSize="12sp"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/issue"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imgBtnIssue"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_sync_saved_locally"
                android:background="@color/white"
                app:tint="@color/gray3"
                android:scaleType="centerCrop"
                />

            <TextView
                android:id="@+id/txtIssues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/issues"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/imgBtnIssue"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dashBoards"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imgBtnDashBoards"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_web"
                android:background="@color/white"
                app:tint="@color/gray3"
                android:scaleType="centerCrop"
                />
            <TextView
                android:id="@+id/txtDashBoardst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@+id/imgBtnDashBoards"
                android:text="@string/dash_board"
                android:textSize="12sp"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bell"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/imgBtnBell"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_bell"
                android:background="@color/white"
                app:tint="@color/gray3"
                android:scaleType="centerCrop"
                />
            <TextView
                android:id="@+id/txtBell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@+id/imgBtnBell"
                android:text="@string/text_notification"
                android:textSize="12sp"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>